fix: corrige import de imagens

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 <h4>Acesso ao sistema</h4>
                 <div id="img-centro">
                   <img
-                    src="./images/bpmn-acesso_ao_sistema.svg"
+                    src="../assets/images/bpmn-acesso_ao_sistema.svg"
                     alt="BPMN - Acesso ao sistema"
                   />
                 </div>
@@ -477,7 +477,7 @@
                 <h4>Criar listas e/ou grupos de listas de compras</h4>
                 <div id="img-centro">
                   <img
-                    src="./images/bpmn-criar_listas.svg"
+                    src="../assets/images/bpmn-criar_listas.svg"
                     alt="BPMN - Criar listas e/ou grupos de listas de compras"
                   />
                 </div>
@@ -486,7 +486,7 @@
                 <h4>Ações possíveis em uma lista</h4>
                 <div id="img-centro">
                   <img
-                    src="./images/bpmn-acoes_possiveis.svg"
+                    src="../assets/images/bpmn-acoes_possiveis.svg"
                     alt="BPMN - Ações possíveis em uma lista"
                   />
                 </div>
@@ -495,7 +495,7 @@
                 <h4>Editar itens da lista</h4>
                 <div id="img-centro">
                   <img
-                    src="./images/bpmn-editar_itens.svg"
+                    src="../assets/images/bpmn-editar_itens.svg"
                     alt="BPMN - Editar itens da lista"
                   />
                 </div>
@@ -506,7 +506,7 @@
                 </h4>
                 <div id="img-centro">
                   <img
-                    src="./images/bpmn-compartilhamento.svg"
+                    src="../assets/images/bpmn-compartilhamento.svg"
                     alt="BPMN - Compartilhamento de listas e/ou grupos de listas de compras"
                   />
                 </div>
